runtime/Gaffer.Runtime.Tests/snapshots/ErrorTests.ProjectionHandlerError_with_partition.verified.txt
Error in 'Test' handler

Handler threw: fail
    ┌─ 3:31
    │
  1 │ fromAll().foreachStream().when({
  2 │ 	$init: function() { return {}; },
  3 │ 	Test: function(s, e) { throw "fail"; }
    │ 	                             ^ fail
    │
  at Test (projection.js:3:31)
  at projection.js:3:8

Event: 42@s-1
Type:  Test
Partition: s-1
